--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ wheel.py-api = "cp312"
 [tool.cibuildwheel]
 # Necessary to see build output from the actual compilation
 build-verbosity = 1
+skip =  ["cp38-*", "pp38-*"]
 
 # Needed for full C++17 support
 [tool.cibuildwheel.macos.environment]
