--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -60,17 +60,11 @@ jobs:
       with:
         path: wheelhouse/*.whl
 
-
   upload_all:
-    name: Upload if release
-    needs: [build_wheels, build_sdist]
+    name: upload binaries to release
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' && github.event.action == 'published'
-
     steps:
-    - uses: actions/setup-python@v4
-
-    - uses: actions/download-artifact@v3
-      with:
-        name: artifact
-        path: dist
+      - uses: softprops/action-gh-release@v1
+        if: ${{startsWith(github.ref, 'refs/tags/') }}
+        with:
+          files: wheelhouse/*.whl
