--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -63,8 +63,15 @@ jobs:
   upload_all:
     name: upload binaries to release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # release changes require contents write
+
     steps:
-      - uses: softprops/action-gh-release@v1
-        if: ${{startsWith(github.ref, 'refs/tags/') }}
-        with:
-          files: wheelhouse/*.whl
+      - uses: actions/checkout@v3
+      - name: Upload Release Asset
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          for f in $(find . -name '*.whl'); do
+            gh release upload v0.1.1-alpha $f
+          done
