--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "scikit-build-core>=0.7.0",
     "nanobind>=1.8.0",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 readme = "README.md"
 license = {text = "MIT"}
 
@@ -26,6 +26,11 @@ test = [
     "ipynb>=0.5.1",
     "black>=23.12.1",
 ]
+dev = [
+    "ipynb>=0.5.1",
+    "ipykernel>=6.28.0",
+]
+zmq = []
 
 [tool.scikit-build]
 # Protect the configuration against future changes in scikit-build-core
